scss/_partial.scss
/* Define font name */
@font-face
{
  font-family: museo;
  src: url(../static/fonts/MuseoSans_500.otf);
}

body {
	overflow: hidden;
}

#description h1 {
	font-size: rem-calc(22);
}

#description small {
	font-size: rem-calc(11.5);
}

#description p {
	margin-top: 30px;
}

#description-text {
	margin-top: 20px;
}

.no-padding {
	padding:0px;
}

#language-menu .lg-not-selected[id="en"] {
	-moz-box-shadow:    inset 0 0 10px #a4a6a2;
   	-webkit-box-shadow: inset 0 0 10px #a4a6a2;
   	box-shadow:         inset 0 0 10px #a4a6a2;
	
	border:0px;
   	border-top-right-radius: 4px;
	-webkit-border-top-right-radius: 4px;  
   	-moz-border-top-right-radius: 4px; 
   	border-bottom-right-radius: 4px;
	-webkit-border-bottom-right-radius: 4px;  
   	-moz-border-bottom-right-radius: 4px; 
}

#language-menu .lg-not-selected[id="nl"] {
	-moz-box-shadow:    inset 0 0 10px #a4a6a2;
   	-webkit-box-shadow: inset 0 0 10px #a4a6a2;
   	box-shadow:         inset 0 0 10px #a4a6a2;
	
	border:0px;
   	border-top-left-radius: 4px;
	-webkit-border-top-left-radius: 4px;  
   	-moz-border-top-left-radius: 4px; 
   	border-bottom-left-radius: 4px;
	-webkit-border-bottom-left-radius: 4px;  
   	-moz-border-bottom-left-radius: 4px; 	
}

.lg-format {
	margin:auto;
	margin-top: 14px;
	text-align:center;
}

.fullWidth {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    max-width: initial;
}

.page-details[id="map-canvas"] {
	display: none;
}

#map-canvas img {
	max-width: none;
}

#map-canvas {
	height: 100%;
}


.page-details [id="image-wrapper"] {
	position: absolute;
	margin:auto;
	height: 100%;
	width: 100%;
	display: block;
	overflow: hidden;
	top: 0px;
	left: 0px;
}

#image-wrapper img {
	position: absolute;
	overflow: hidden;
	top:0px;
	left:0px;
	width: 100%;
}

#content-image {
	overflow: hidden;
}

.page-details[id="image-wrapper"] {
	display: none;
} 

.page-map[id="image-wrapper"] {
	display: none;
}

.page-details[id="description"] {
	position:absolute;
	top:0px;
    right:0px;
  	padding:45px;
	color:white;
    background-image: none;
    height: 100%;
    background-color:rgba(59, 55, 51, 0.95);
}

.page-map[id="description"] {
	display: none;
	position:absolute;
	top:0px;
    right:0px;
  	padding:45px;
	color:white;
    background-image: none; 
    height: 100%;
    background-color:rgba(59, 55, 51, 0.95);
}

#left {
	background-color: none;
    background-image: none;
    position:absolute;
    display: none;
    top:0px;
    left:0px;
}

#close-description {
	position:absolute;
	top:20px;
	right: 25px;
	width: 30px;
	height: 30px;
	cursor: pointer;
}

#close-container {
	position:relative;
}

#close-container img {
	position: absolute;
	left:50%;
	top:50%;
	width: 25px;
	height: 25px;
	background: url('../static/icon-assets.png') -70px -40px;
	margin-left: -12.5px;
	margin-top: 6px;
}

#description-title {
	margin-top: 135px;
	background: none;
	line-height: 1.4;
}
#description-content {
	background-color: none;
	line-height: 1.4;
	height: 450px;
	overflow: auto;
}

#description-content p {
}


#faux-map {
	position:absolute;
	cursor: pointer;
	bottom: 50px;
	left: 50px;
	width: 126px;
	height: 126px;
}

#faux-map img {
	max-width: 100%;
	max-height: 100%;
}

.page-map[id="faux-map"] {
	display: none;
}

.page-details[id="main-logo"] {
	position: absolute;
	display: none;
	top:-3px;
	right: 85px;
	height: 145px;
	width: 100px;
	background-image: url("../static/museumlogo.png");
}

.page-map[id="main-logo"] {
	position: absolute;
	top:-3px;
	right: 85px;
	height: 145px;
	width: 100px;
	background-image: url("../static/museumlogo.png");
}

#description-logo {
	position: absolute;
	display: none;
	top: -2px;
	left: 45px;
	height: 145px;
	width: 100px;
	background-image: url("../static/museumlogo.png");;
}

#small-logo {
	position: absolute;
	top: -3px;
	left: 45px;
	height: 145px;
	width: 100px;
	background-image: url("../static/museumlogo.png");;
}

.page-details[id="language-menu"] {
	position:absolute;
	display: none;
	bottom: 50px;
	right: 300px;
	width: 100px;
	height: 40px;
	border:0px;
	border-radius: 4px;
	-webkit-border-radius: 4px;  
    -moz-border-radius: 4px;  
	border-color: #dfe0dd;
	background-color: #dfe0dd;
}

.page-map[id="language-menu"] {
	position:absolute;
	bottom: 50px;
	right: 300px;
	width: 100px;
	height: 40px;
	border:0px;
	border-radius: 4px;
	-webkit-border-radius: 4px;  
    -moz-border-radius: 4px;  
	border-color: #dfe0dd;
	background-color: #e0e0de;
}

#language-menu div {
	position: relative;
	font-size: 12px;
	height: 100%;
	color:#999999;
	text-shadow: 1px 1px #ffffff;
}

#language-menu #nl:hover {
	background-color: rgba(255, 255, 255, 1.0000);
	cursor: pointer;
	-webkit-border-top-left-radius: 4px;
	-webkit-border-bottom-left-radius: 4px;  
    -moz-border-top-left-radius: 4px;
	-moz-border-bottom-left-radius: 4px; 
	border-top-left-radius: 4px;
	border-bottom-left-radius: 4px;
}

#language-menu #en:hover {
	background-color: rgba(255, 255, 255, 1.0000);
	cursor: pointer;
	-webkit-border-top-right-radius: 4px;
	-webkit-border-bottom-right-radius: 4px;  
    -moz-border-top-right-radius: 4px;
	-moz-border-bottom-right-radius: 4px; 
	border-top-right-radius: 4px;
	border-bottom-right-radius: 4px;


}

#language-menu .lg-selected[id="nl"] {
	background-color: rgba(255, 255, 255, 0.90);
	cursor: pointer;
	-webkit-border-top-left-radius: 4px;
	-webkit-border-bottom-left-radius: 4px;  
    -moz-border-top-left-radius: 4px;
	-moz-border-bottom-left-radius: 4px; 
	border-top-left-radius: 4px;
	border-bottom-left-radius: 4px;
}

#language-menu .lg-selected[id="en"] {
	background-color: rgba(255, 255, 255, 0.90);
	cursor: pointer;
	-webkit-border-top-right-radius: 4px;
	-webkit-border-bottom-right-radius: 4px;  
    -moz-border-top-right-radius: 4px;
	-moz-border-bottom-right-radius: 4px; 
	border-top-right-radius: 4px;
	border-bottom-right-radius: 4px;
}
/* ... */

